# pc-monitor

./: .gitignore  DESIGN.md  README.md  README_SETUP.md  package.json  pc-monitor.sln
.claude/: settings.local.json
backend-cpp/: .clang-format  .clang-tidy  .clangd  .iwyu.imp  CMakeLists.txt  vcpkg.json
backend-cpp/include/: system_monitor.hpp  web_server.hpp
backend-cpp/src/: main.cpp  system_monitor.cpp  web_server.cpp
backend-csharp/: PCMonitor.csproj  Program.cs
backend-csharp/Hubs/: SystemStatsHub.cs
backend-csharp/Models/: SystemModels.cs
backend-csharp/Services/: ISystemMonitorService.cs  StatsBroadcastingService.cs  SystemMonitorService.cs
backend-csharp/publish/: web.config
backend-python/: README.md  main.py  monitor.py  package.json  pyproject.toml  requirements.txt
backend-python/api/: routes.py
backend-python/monitors/: cpu_monitor.py  memory_monitor.py  system_monitor.py
backend-python/src/: main.js
backend-python/websocket/: ws_handler.py
backend-rust/: Cargo.toml  build.bat  clean_build.bat  debug_build.bat  hybrid_build.bat  tauri.conf.json
backend-rust/.cargo/: config.toml
backend-rust/src/: handlers.rs  main.rs  monitor.rs  types.rs
backend-typescript/: package.json  tsconfig.json
backend-typescript/src/: electron-main.ts  main.ts  system-monitor.ts  types.ts  web-server.ts
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CPUCoreGrid.tsx  CPUMonitor.tsx  Dashboard.tsx  MemoryMonitor.tsx  index.ts
frontend/src/hooks/: index.ts  useRealTimeChart.ts  useSystemStats.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
scripts/: Build-All.ps1  Build-Rust.ps1  Clean-All.ps1  Dev-Rust.ps1  Install-All.ps1  Lint-All.ps1  Test-All.ps1
