[package]
name = "pc-monitor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
sysinfo = "0.29"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[[bin]]
name = "pc-monitor-backend"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]