[package]
name = "pc-monitor-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pc-monitor-rust"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.8.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
sysinfo = "0.29"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
